MDEV-11433 JSON_MERGE returns a non-NULL result with a NULL argument.

Item_func_json_merge fixed.